[project]
name = "ohmqtt"
version = "0.1.0"
description = "MQTT Client"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "cryptography>=44.0.2",
    "mypy>=1.15.0",
    "pympler>=1.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pyyaml>=6.0.2",
    "ruff>=0.11.2",
    "yappi>=1.6.10",
]

[tool.mypy]
files = ["ohmqtt"]
strict = true
strict_bytes = true
strict_equality = true

[tool.ruff]
include = [
    "pyproject.toml",
    "ohmqtt/**/*.py",
]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::ResourceWarning",
]
addopts = "--cov=ohmqtt --cov-report=term-missing -v"

[tool.setuptools.packages.find]
include = ["ohmqtt"]

