[project]
name = "ohmqtt"
version = "0.0.1"
description = "MQTT Client"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typing-extensions>=4.12.2; python_version < '3.11'",
]

[dependency-groups]
dev = [
    "complexipy>=2.1.1; platform_system != 'Windows'",
    "cryptography>=44.0.2",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pyyaml>=6.0.2",
    "ruff>=0.11.2",
    "typos>=1.31.1",
]

[tool.mypy]
files = [
    "examples",
    "ohmqtt",
]
strict = true
strict_bytes = true
strict_equality = true

[tool.ruff]
include = [
    "pyproject.toml",
    "examples/**/*.py",
    "ohmqtt/**/*.py",
    "tests/**/*.py",
]

[tool.ruff.lint]
select = ["A", "E1", "E4", "E7", "E9", "F", "FA", "G", "INP", "ISC", "LOG", "PIE", "PT", "RET", "SLF", "W", "N", "Q"]
ignore = ["PT011"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E731"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::ResourceWarning",
]
addopts = "--cov=ohmqtt --cov-report=term-missing -v"

[tool.setuptools.packages.find]
include = ["ohmqtt"]

