[project]
name = "ohmqtt"
version = "0.0.1"
description = "MQTT Client"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typing-extensions>=4.12.2; python_version < '3.11'",
]

[dependency-groups]
dev = [
    "complexipy>=2.1.1; platform_system != 'Windows'",
    "cryptography>=44.0.2",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pyyaml>=6.0.2",
    "ruff>=0.11.2",
    "typos>=1.31.1",
]
profile = [
    "austin>=2016.0.1",
    "austin-dist>=3.7.0",
    "austin-tui>=1.3.0",
    "pympler>=1.1",
    "yappi>=1.6.10",
]

[tool.mypy]
files = [
    "examples",
    "ohmqtt",
]
strict = true
strict_bytes = true
strict_equality = true

[tool.ruff]
include = [
    "pyproject.toml",
    "examples/**/*.py",
    "ohmqtt/**/*.py",
    "tests/**/*.py",
]

[tool.ruff.lint]
select = [
    "A",
    "E1", "E4", "E7", "E9",
    "F",
    "FA",
    "FLY",
    "FURB",
    "G",
    "INP",
    "ISC",
    "LOG",
    "PERF",
    "PIE",
    "PLC", "PLE", "PLW",
    "PT",
    "PTH",
    "RET",
    "RUF",
    "SIM105", "SIM107", "SIM300",
    "SLF",
    "SLOT",
    "W",
    "N",
    "UP037", "UP006",
    "Q",
]
ignore = ["PLC0414", "PT011"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E731", "PERF", "PL"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::ResourceWarning",
]
addopts = "--cov=ohmqtt --cov-report=term-missing -v"

[tool.setuptools.packages.find]
include = ["ohmqtt"]

